Publish pyjava 0.3.3 artifacts