@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <!-- DO NOT EDIT THIS FILE DIRECTLY, ANY CHANGE MAY BE OVERWRITE -->
     <groupId>tech.mlsql</groupId>
-    <artifactId>pyjava-3.0_2.12</artifactId>
-    <version>0.3.2</version>
+    <artifactId>pyjava-${spark.bigversion}_${scala.binary.version}</artifactId>
+    <version>0.3.3</version>
     <name>pyjava with arrow support</name>
     <url>https://github.com/allwefantasy/pyjava</url>
     <description>
@@ -44,22 +44,48 @@
 
         <manifold.version>2021.1.12</manifold.version>
 
-        <scala.version>2.12.10</scala.version>
-        <scala.binary.version>2.12</scala.binary.version>
-        <spark.version>3.1.1</spark.version>
-        <spark.bigversion>3.0</spark.bigversion>
-        <arrow.version>2.0.0</arrow.version>
+        <scala.version>2.13.17</scala.version>
+        <scala.binary.version>2.13</scala.binary.version>
+        <spark.version>4.1.2</spark.version>
+        <spark.bigversion>4.1</spark.bigversion>
+        <arrow.version>18.3.0</arrow.version>
+        <jackson.version>2.21.2</jackson.version>
 
         <guava.version>16.0</guava.version>
         <httpclient.version>4.5.3</httpclient.version>
         <scope>provided</scope>
-        <hadoop-client-version>2.6.5</hadoop-client-version>
-        <common-utils-version>0.3.6</common-utils-version>
+        <hadoop-client-version>3.4.2</hadoop-client-version>
+        <common-utils-version>1.0.0</common-utils-version>
         <serviceframework.version>2.0.6</serviceframework.version>
+        <scalatest.version>3.2.19</scalatest.version>
+        <test.jvm.args></test.jvm.args>
+        <skipTests>false</skipTests>
 
     </properties>
 
     <profiles>
+        <profile>
+            <id>scala-2.11</id>
+            <properties>
+                <scala.version>2.11.8</scala.version>
+                <scala.binary.version>2.11</scala.binary.version>
+                <spark.version>2.4.3</spark.version>
+                <spark.bigversion>2.4</spark.bigversion>
+                <jackson.version>2.10.1</jackson.version>
+                <hadoop-client-version>2.6.5</hadoop-client-version>
+                <common-utils-version>0.3.9.2</common-utils-version>
+                <scalatest.version>3.2.3</scalatest.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk17-test-args</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <test.jvm.args>--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</test.jvm.args>
+            </properties>
+        </profile>
         <profile>
             <id>disable-java8-doclint</id>
             <activation>
@@ -101,6 +127,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-reflect</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>common-utils_${scala.binary.version}</artifactId>
             <version>${common-utils-version}</version>
@@ -108,13 +144,13 @@
         <dependency>
             <groupId>org.scalactic</groupId>
             <artifactId>scalactic_${scala.binary.version}</artifactId>
-            <version>3.0.0</version>
+            <version>${scalatest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.binary.version}</artifactId>
-            <version>3.0.0</version>
+            <version>${scalatest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -125,6 +161,10 @@
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-annotations</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -145,11 +185,27 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-memory-netty</artifactId>
+            <version>${arrow.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-buffer</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-common</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.10.1</version>
+            <version>${jackson.version}</version>
         </dependency>
         
 
@@ -228,11 +284,12 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx4024m</argLine>
+                    <argLine>-Xmx4024m ${test.jvm.args}</argLine>
                     <includes>
                         <include>**/*.java</include>
                         <include>**/*.scala</include>
                     </includes>
+                    <skipTests>${skipTests}</skipTests>
                 </configuration>
 
             </plugin>
@@ -307,6 +364,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.12.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -317,14 +375,39 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.7.3</version>
+                <configuration>
+                    <flattenMode>ossrh</flattenMode>
+                    <updatePomFile>true</updatePomFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.10.0</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>sonatype-nexus-staging</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    <publishingServerId>central-portal</publishingServerId>
+                    <autoPublish>true</autoPublish>
+                    <waitUntil>published</waitUntil>
                 </configuration>
             </plugin>
 
@@ -337,8 +420,9 @@
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
                     <filereports>WDF TestSuite.txt</filereports>
-                    <htmlreporters>${project.build.directory}/html/scalatest</htmlreporters>
+                    <argLine>${test.jvm.args}</argLine>
                     <testFailureIgnore>false</testFailureIgnore>
+                    <skipTests>${skipTests}</skipTests>
                 </configuration>
                 <executions>
                     <execution>
@@ -377,12 +461,12 @@
     </build>
     <distributionManagement>
         <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>central-portal</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
         </snapshotRepository>
         <repository>
-            <id>sonatype-nexus-staging</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
+            <id>central-portal</id>
+            <url>https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/
             </url>
         </repository>
     </distributionManagement>
